Bug 243259 - Dolphin seems to open and read multiple instances of a video file when double clicked using serious disk resources
Summary: Dolphin seems to open and read multiple instances of a video file when double...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-30 16:51 UTC by Jon Skanes
Modified: 2010-07-01 23:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
lsof of the partition in question (927 bytes, text/plain)
2010-06-30 16:54 UTC, Jon Skanes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jon Skanes 2010-06-30 16:51:42 UTC
Application: dolphin (1.5)
KDE Platform Version: 4.4.90 (KDE 4.4.90 (KDE 4.5 RC1))
Qt Version: 4.7.0
Operating System: Linux 2.6.32-22-generic-pae i686
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
- What I was doing when the application crashed: (not a crash, i sent SIGABRT)

I open Dolphin, double click on a large video file to be opened in the default application (kaffeine in my case) and the system comes to a crawl with dolphin reading the file.  The file in question is on a removable ntfs-3g mounted partition.

- Unusual behavior I noticed:

The system becomes nearly unresponsive while dolphin is open.  I have to kill dolphin to remedy.  The video will not play until dolphin is closed due to lack of resources.

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Aborted
[Current thread is 1 (Thread 0xb4c99710 (LWP 24587))]

Thread 5 (Thread 0xac9b2b70 (LWP 24610)):
#0  0xb77ae430 in __kernel_vsyscall ()
#1  0xb5595342 in pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_timedwait.S:179
#2  0xb768fa34 in __pthread_cond_timedwait (cond=0xa22f320, mutex=0xa22f308, abstime=0xac9b2320) at forward.c:152
#3  0xb1bb0ce7 in metronom_sync_loop (this=0xa22f2c0) at metronom.c:851
#4  0xb559096e in start_thread (arg=0xac9b2b70) at pthread_create.c:300
#5  0xb7682a4e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 4 (Thread 0xaade8b70 (LWP 24679)):
#0  0xb77ae430 in __kernel_vsyscall ()
#1  0xb7674b86 in *__GI___poll (fds=0xb770aff4, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0xb4e5b13b in _dbus_poll (fds=0xaade7794, n_fds=1, timeout_milliseconds=-1) at dbus-sysdeps-unix.c:1970
#3  0xb4e530ef in socket_do_iteration (transport=0x9c01998, flags=7, timeout_milliseconds=-1) at dbus-transport-socket.c:1066
#4  0xb4e512cc in _dbus_transport_do_iteration (transport=0x9c01998, flags=7, timeout_milliseconds=-1) at dbus-transport.c:956
#5  0xb4e3bba3 in _dbus_connection_do_iteration_unlocked (connection=0x9c01d58, flags=7, timeout_milliseconds=1) at dbus-connection.c:1163
#6  0xb4e3c428 in _dbus_connection_flush_unlocked (connection=0x9c01d58) at dbus-connection.c:3398
#7  0xb4e3e1bf in _dbus_connection_block_pending_call (pending=0xa3c1840) at dbus-connection.c:2295
#8  0xb4e4ba51 in dbus_pending_call_block (pending=0x1) at dbus-pending-call.c:705
#9  0xb4e3d7cc in dbus_connection_send_with_reply_and_block (connection=0x9c01d58, message=0xa333a68, timeout_milliseconds=-1, error=0xaade7a14) at dbus-connection.c:3354
#10 0xb5d6775f in q_dbus_connection_send_with_reply_and_block (this=0x9bff7a8, message=..., sendMode=1, timeout=-1) at qdbus_symbols_p.h:135
#11 QDBusConnectionPrivate::sendWithReply (this=0x9bff7a8, message=..., sendMode=1, timeout=-1) at qdbusintegrator.cpp:1813
#12 0xb5d521bb in QDBusConnection::call (this=0x9c04970, message=..., mode=4294967295, timeout=-1) at qdbusconnection.cpp:524
#13 0xb5d7334f in QDBusAbstractInterface::callWithArgumentList (this=0x9bffe98, mode=QDBus::Block, method=..., args=...) at qdbusabstractinterface.cpp:442
#14 0xb5d7396e in QDBusAbstractInterface::internalConstCall (this=0x9bffe98, mode=QDBus::AutoDetect, method=..., args=...) at qdbusabstractinterface.cpp:765
#15 0xb5d54bd1 in QDBusConnectionInterface::isServiceRegistered (this=0x9bffe98, serviceName=...) at qdbusconnectioninterface.cpp:209
#16 0xb5fc58f3 in KSycocaPrivate::checkDatabase (this=0xa3bef30, ifNotFound=...) at ../../kdecore/sycoca/ksycoca.cpp:413
#17 0xb5fc6572 in KSycoca::findFactory (this=0xa173a58, id=KST_KServiceTypeFactory) at ../../kdecore/sycoca/ksycoca.cpp:456
#18 0xb5fca39c in KSycocaFactory (this=0xa3bf768, factory_id=KST_KServiceTypeFactory) at ../../kdecore/sycoca/ksycocafactory.cpp:53
#19 0xb5f2fd2a in KServiceTypeFactory (this=0xa3bf768) at ../../kdecore/services/kservicetypefactory.cpp:31
#20 0xb5f302fc in KSycocaFactorySingleton<KServiceTypeFactory>::self () at ../../kdecore/sycoca/ksycocafactory.h:200
#21 KServiceTypeFactory::self () at ../../kdecore/services/kservicetypefactory.cpp:65
#22 0xb5f3411f in KServiceTypeTrader::defaultOffers (this=0x9fbb7d0, serviceType=..., constraint=...) at ../../kdecore/services/kservicetypetrader.cpp:116
#23 0xb5f34595 in KServiceTypeTrader::query (this=0x9fbb7d0, serviceType=..., constraint=...) at ../../kdecore/services/kservicetypetrader.cpp:141
#24 0xb6ff3172 in KFileWriterProvider::loadPlugin (this=0xa2de090, key=...) at ../../kio/kio/kfilewriteplugin.cpp:52
#25 0xb6fea7d6 in KFileMetaInfoPrivate::initWriters (this=0xa2b9580, file=...) at ../../kio/kio/kfilemetainfo.cpp:220
#26 0xb6fec8c3 in KFileMetaInfo (this=0xaade82c4, url=...) at ../../kio/kio/kfilemetainfo.cpp:251
#27 0xb70ef0cf in KLoadFileMetaDataThread::run (this=0xa499bd8) at ../../kio/kfile/kloadfilemetadatathread.cpp:123
#28 0xb5b0cdc9 in QThreadPrivate::start (arg=0xa499bd8) at thread/qthread_unix.cpp:266
#29 0xb559096e in start_thread (arg=0xaade8b70) at pthread_create.c:300
#30 0xb7682a4e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 3 (Thread 0xaa5e7b70 (LWP 24684)):
#0  0xb77ae430 in __kernel_vsyscall ()
#1  0xb5597af9 in __lll_lock_wait () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/lowlevellock.S:142
#2  0xb559313b in _L_lock_748 () from /lib/tls/i686/cmov/libpthread.so.0
#3  0xb5592f61 in __pthread_mutex_lock (mutex=0x9c01e18) at pthread_mutex_lock.c:61
#4  0xb768fba6 in pthread_mutex_lock (mutex=0x9c01e18) at forward.c:182
#5  0xb4e59f5a in _dbus_pthread_mutex_lock (mutex=0x9c01e18) at dbus-sysdeps-pthread.c:168
#6  0xb4e508d8 in _dbus_mutex_lock (mutex=0xfffffe00) at dbus-threads.c:148
#7  0xb4e3b6bd in _dbus_connection_acquire_io_path (connection=0x9c01d58, timeout_milliseconds=-1) at dbus-connection.c:1031
#8  0xb4e3bb75 in _dbus_connection_do_iteration_unlocked (connection=0x9c01d58, flags=7, timeout_milliseconds=163585560) at dbus-connection.c:1158
#9  0xb4e3c428 in _dbus_connection_flush_unlocked (connection=0x9c01d58) at dbus-connection.c:3398
#10 0xb4e3e1bf in _dbus_connection_block_pending_call (pending=0xa1c7a60) at dbus-connection.c:2295
#11 0xb4e4ba51 in dbus_pending_call_block (pending=0xfffffe00) at dbus-pending-call.c:705
#12 0xb4e3d7cc in dbus_connection_send_with_reply_and_block (connection=0x9c01d58, message=0xa17d208, timeout_milliseconds=-1, error=0xaa5e6a14) at dbus-connection.c:3354
#13 0xb5d6775f in q_dbus_connection_send_with_reply_and_block (this=0x9bff7a8, message=..., sendMode=1, timeout=-1) at qdbus_symbols_p.h:135
#14 QDBusConnectionPrivate::sendWithReply (this=0x9bff7a8, message=..., sendMode=1, timeout=-1) at qdbusintegrator.cpp:1813
#15 0xb5d521bb in QDBusConnection::call (this=0x9c04970, message=..., mode=163585560, timeout=-1) at qdbusconnection.cpp:524
#16 0xb5d7334f in QDBusAbstractInterface::callWithArgumentList (this=0x9bffe98, mode=QDBus::Block, method=..., args=...) at qdbusabstractinterface.cpp:442
#17 0xb5d7396e in QDBusAbstractInterface::internalConstCall (this=0x9bffe98, mode=QDBus::AutoDetect, method=..., args=...) at qdbusabstractinterface.cpp:765
#18 0xb5d54bd1 in QDBusConnectionInterface::isServiceRegistered (this=0x9bffe98, serviceName=...) at qdbusconnectioninterface.cpp:209
#19 0xb5fc58f3 in KSycocaPrivate::checkDatabase (this=0x9e0da28, ifNotFound=...) at ../../kdecore/sycoca/ksycoca.cpp:413
#20 0xb5fc6572 in KSycoca::findFactory (this=0xa3cee20, id=KST_KServiceTypeFactory) at ../../kdecore/sycoca/ksycoca.cpp:456
#21 0xb5fca39c in KSycocaFactory (this=0xa3bfb60, factory_id=KST_KServiceTypeFactory) at ../../kdecore/sycoca/ksycocafactory.cpp:53
#22 0xb5f2fd2a in KServiceTypeFactory (this=0xa3bfb60) at ../../kdecore/services/kservicetypefactory.cpp:31
#23 0xb5f302fc in KSycocaFactorySingleton<KServiceTypeFactory>::self () at ../../kdecore/sycoca/ksycocafactory.h:200
#24 KServiceTypeFactory::self () at ../../kdecore/services/kservicetypefactory.cpp:65
#25 0xb5f3411f in KServiceTypeTrader::defaultOffers (this=0x9fbb7d0, serviceType=..., constraint=...) at ../../kdecore/services/kservicetypetrader.cpp:116
#26 0xb5f34595 in KServiceTypeTrader::query (this=0x9fbb7d0, serviceType=..., constraint=...) at ../../kdecore/services/kservicetypetrader.cpp:141
#27 0xb6ff3172 in KFileWriterProvider::loadPlugin (this=0xa2de090, key=...) at ../../kio/kio/kfilewriteplugin.cpp:52
#28 0xb6fea7d6 in KFileMetaInfoPrivate::initWriters (this=0xa265908, file=...) at ../../kio/kio/kfilemetainfo.cpp:220
#29 0xb6fec8c3 in KFileMetaInfo (this=0xaa5e72c4, url=...) at ../../kio/kio/kfilemetainfo.cpp:251
#30 0xb70ef0cf in KLoadFileMetaDataThread::run (this=0xa38bfd8) at ../../kio/kfile/kloadfilemetadatathread.cpp:123
#31 0xb5b0cdc9 in QThreadPrivate::start (arg=0xa38bfd8) at thread/qthread_unix.cpp:266
#32 0xb559096e in start_thread (arg=0xaa5e7b70) at pthread_create.c:300
#33 0xb7682a4e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xa9de6b70 (LWP 24686)):
#0  0xb77ae430 in __kernel_vsyscall ()
#1  0xb5597af9 in __lll_lock_wait () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/lowlevellock.S:142
#2  0xb559313b in _L_lock_748 () from /lib/tls/i686/cmov/libpthread.so.0
#3  0xb5592f61 in __pthread_mutex_lock (mutex=0x9c01e18) at pthread_mutex_lock.c:61
#4  0xb768fba6 in pthread_mutex_lock (mutex=0x9c01e18) at forward.c:182
#5  0xb4e59f5a in _dbus_pthread_mutex_lock (mutex=0x9c01e18) at dbus-sysdeps-pthread.c:168
#6  0xb4e508d8 in _dbus_mutex_lock (mutex=0xfffffe00) at dbus-threads.c:148
#7  0xb4e3b6bd in _dbus_connection_acquire_io_path (connection=0x9c01d58, timeout_milliseconds=-1) at dbus-connection.c:1031
#8  0xb4e3bb75 in _dbus_connection_do_iteration_unlocked (connection=0x9c01d58, flags=7, timeout_milliseconds=163585560) at dbus-connection.c:1158
#9  0xb4e3c428 in _dbus_connection_flush_unlocked (connection=0x9c01d58) at dbus-connection.c:3398
#10 0xb4e3e1bf in _dbus_connection_block_pending_call (pending=0xa45a410) at dbus-connection.c:2295
#11 0xb4e4ba51 in dbus_pending_call_block (pending=0xfffffe00) at dbus-pending-call.c:705
#12 0xb4e3d7cc in dbus_connection_send_with_reply_and_block (connection=0x9c01d58, message=0xa2ace18, timeout_milliseconds=-1, error=0xa9de5a14) at dbus-connection.c:3354
#13 0xb5d6775f in q_dbus_connection_send_with_reply_and_block (this=0x9bff7a8, message=..., sendMode=1, timeout=-1) at qdbus_symbols_p.h:135
#14 QDBusConnectionPrivate::sendWithReply (this=0x9bff7a8, message=..., sendMode=1, timeout=-1) at qdbusintegrator.cpp:1813
#15 0xb5d521bb in QDBusConnection::call (this=0x9c04970, message=..., mode=163585560, timeout=-1) at qdbusconnection.cpp:524
#16 0xb5d7334f in QDBusAbstractInterface::callWithArgumentList (this=0x9bffe98, mode=QDBus::Block, method=..., args=...) at qdbusabstractinterface.cpp:442
#17 0xb5d7396e in QDBusAbstractInterface::internalConstCall (this=0x9bffe98, mode=QDBus::AutoDetect, method=..., args=...) at qdbusabstractinterface.cpp:765
#18 0xb5d54bd1 in QDBusConnectionInterface::isServiceRegistered (this=0x9bffe98, serviceName=...) at qdbusconnectioninterface.cpp:209
#19 0xb5fc58f3 in KSycocaPrivate::checkDatabase (this=0xa45fc38, ifNotFound=...) at ../../kdecore/sycoca/ksycoca.cpp:413
#20 0xb5fc6572 in KSycoca::findFactory (this=0xa45cc48, id=KST_KServiceTypeFactory) at ../../kdecore/sycoca/ksycoca.cpp:456
#21 0xb5fca39c in KSycocaFactory (this=0xa45b948, factory_id=KST_KServiceTypeFactory) at ../../kdecore/sycoca/ksycocafactory.cpp:53
#22 0xb5f2fd2a in KServiceTypeFactory (this=0xa45b948) at ../../kdecore/services/kservicetypefactory.cpp:31
#23 0xb5f302fc in KSycocaFactorySingleton<KServiceTypeFactory>::self () at ../../kdecore/sycoca/ksycocafactory.h:200
#24 KServiceTypeFactory::self () at ../../kdecore/services/kservicetypefactory.cpp:65
#25 0xb5f3411f in KServiceTypeTrader::defaultOffers (this=0x9fbb7d0, serviceType=..., constraint=...) at ../../kdecore/services/kservicetypetrader.cpp:116
#26 0xb5f34595 in KServiceTypeTrader::query (this=0x9fbb7d0, serviceType=..., constraint=...) at ../../kdecore/services/kservicetypetrader.cpp:141
#27 0xb6ff3172 in KFileWriterProvider::loadPlugin (this=0xa2de090, key=...) at ../../kio/kio/kfilewriteplugin.cpp:52
#28 0xb6fea7d6 in KFileMetaInfoPrivate::initWriters (this=0xa457b98, file=...) at ../../kio/kio/kfilemetainfo.cpp:220
#29 0xb6fec8c3 in KFileMetaInfo (this=0xa9de62c4, url=...) at ../../kio/kio/kfilemetainfo.cpp:251
#30 0xb70ef0cf in KLoadFileMetaDataThread::run (this=0xa334308) at ../../kio/kfile/kloadfilemetadatathread.cpp:123
#31 0xb5b0cdc9 in QThreadPrivate::start (arg=0xa334308) at thread/qthread_unix.cpp:266
#32 0xb559096e in start_thread (arg=0xa9de6b70) at pthread_create.c:300
#33 0xb7682a4e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb4c99710 (LWP 24587)):
[KCrash Handler]
#7  0xb77ae430 in __kernel_vsyscall ()
#8  0xb7674b86 in *__GI___poll (fds=0xb770aff4, nfds=11, timeout=3331) at ../sysdeps/unix/sysv/linux/poll.c:87
#9  0xb52ab4eb in IA__g_poll (fds=0xa140d00, nfds=11, timeout=3331) at /build/buildd/glib2.0-2.24.1/glib/gpoll.c:127
#10 0xb529e0ac in g_main_context_poll (context=0x9c09b18, block=<value optimized out>, dispatch=1, self=0x9c0fed0) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2904
#11 g_main_context_iterate (context=0x9c09b18, block=<value optimized out>, dispatch=1, self=0x9c0fed0) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2586
#12 0xb529e4b8 in IA__g_main_context_iteration (context=0x9c09b18, may_block=1) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2654
#13 0xb5c3bee5 in QEventDispatcherGlib::processEvents (this=0x9c05148, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#14 0xb6248105 in QGuiEventDispatcherGlib::processEvents (this=0x9c05148, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#15 0xb5c0c1a9 in QEventLoop::processEvents (this=0xbfd9b974, flags=) at kernel/qeventloop.cpp:149
#16 0xb5c0c5fa in QEventLoop::exec (this=0xbfd9b974, flags=...) at kernel/qeventloop.cpp:201
#17 0xb5c10baf in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#18 0xb6186157 in QApplication::exec () at kernel/qapplication.cpp:3637
#19 0xb775e20b in kdemain (argc=5, argv=0xbfd9bc14) at ../../../../apps/dolphin/src/main.cpp:98
#20 0x080485fb in main (argc=5, argv=0xbfd9bc14) at dolphin_dummy.cpp:3

Possible duplicates by query: bug 237013, bug 236867, bug 236391.

Reported using DrKonqi
Comment 1 Jon Skanes 2010-06-30 16:54:30 UTC
Created attachment 48486 [details]
lsof of the partition in question
Comment 2 Peter Penz 2010-07-01 23:22:28 UTC
Fixed for KDE SC 4.5: Prevent that the whole file is read for getting the meta data and use the KFileMetaInfo::Fastest switch.