Prevent that the whole file is read for getting the meta data and use the KFileMetaInfo::Fastest switch.

BUG: 243259
BUG: 243077

svn path=/trunk/KDE/kdelibs/; revision=1145136