kio/kfile/kloadfilemetadatathread.cpp
@@ -120,7 +120,8 @@ void KLoadFileMetaDataThread::run()
             if (variants.isEmpty()) {
                 // the file has not been indexed, query the meta data
                 // directly from the file
-                KFileMetaInfo metaInfo(urls.first());
+                const QString path = urls.first().toLocalFile();
+                KFileMetaInfo metaInfo(path, QString(), KFileMetaInfo::Fastest);
                 const QHash<QString, KFileMetaInfoItem> metaInfoItems = metaInfo.items();
                 foreach (const KFileMetaInfoItem& metaInfoItem, metaInfoItems) {
                     const QString uriString = metaInfoItem.name();
